[project]
name = "bachelor-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "openai-whisper>=20250625",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "transformers>=5.2.0",
]
